# manus-use

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_README.md  CLI_USAGE_GUIDE.md  CONTRIBUTING.md  CVE-2025-33073_Detailed_Analysis.md  CVE-2025-33073_POC_Exploit_Analysis.md  CVE-2025-6545_Exploit_Search_Report.md  CVE-2025-6545_research.md  EVOLUTION_LOG.md  LICENSE  README.md  README_IMPORTANT.md  SUMMARY.md  agentic_vi.py  analyze_browser_use_simple.py  argocd_xss_poc.md  browse_strands_all_content.py  browse_strands_docs.py  browse_strands_extended.py  browse_strands_focused.py  browse_strands_max_timeout.py  browse_strands_simple.py  browser-use-report.md  browser_use_documentation_clean.md  chrome_vulnerabilities_analysis_may2025.md  chrome_vulnerability_poc_validation.md  cve_checker.py  debug_orchestrator.py  demo_all_features.py  demo_bedrock.py  demo_browser.py  demo_cli_usage.py  demo_environment.py  demo_new_orchestrator.py  demo_orchestrator_routing.py  demo_orchestrator_simple.py  demo_workflow_orchestrator.py  (+92 more)
config/: config.bedrock.toml  config.example.toml
docs/: CVE-2025-33073_Research_Report.md  CVE-2025-6545_CWE_Analysis.md  CVE-2025-6545_Comprehensive_Report.md  CVE-2025-6545_POC_Search_Report.md  CVE-2025-6545_Research_Report.md  CVE-2025-6545_Technical_Analysis_and_POC_Search.md  CVE-2025-6545_Vulnerability_Report.md  CVE-2025-6545_research.md.bak  CVE-2025-6545_verification_report.md  browser-agent-setup.md  browser_use_documentation.md  chrome_media_vulnerability_analysis.md  chrome_vulnerability_poc_validation_report.md  evolution-log.md  ivanti_epmm_vulnerabilities_report.md  quick-start.md  vulnerability_analysis_report.md  vulnerability_explanation.md  vulnerability_findings_report.md
examples/: agent_skills_remediation_demo.py  analyze_browser_use_docs_demo.py  basic_usage.py  browser_agent_demo.py  browser_bedrock_demo.py  browser_orchestration_demo.py  browser_use_agent_example.py  browser_use_anthropic_bedrock_demo.py  browser_use_bedrock_boto3_demo.py  browser_use_demo.py  mcp_sse_client_demo.py  mcp_sse_demo.py  mcp_stdio_demo.py  multi_agent_flow.py  test_browser_agent.py  test_browser_bedrock.py  vulnerability_discovery_demo.py  workflow_demo.py  workflow_lark_demo.py
repl_state/: repl_state.pkl
scripts/: agentic_vi.py  analyze_browser_use_simple.py  chrome_vulnerability_analysis.py  demo_browser.py  go_vulnerabilities.py  mcp_test.py  mcp_test_sse.py  python_function_executor_workflow.py  release.py  safe_research_environment.sh  setup_env.sh  tenable_js_vulns.py  vd_agent copy 3.py  vd_agent copy 5.py  vd_agent copy 7.py  vd_agent.py  vi_agent copy 2.py  vi_agent copy.py  vi_agent.py  vi_agentx.py  vllm_mooncake_exploit_poc.py  workflow_agent_example.py
tests/: test_agent_config.py  test_agents.py  (+47 more)
(+160 files in other folders)
